# schoo

./: README.md
001_ServerTCP/classi/: Address.hpp  WebServer.hpp  address
001_ServerTCP/lib/: mylib.h
001_ServerTCP/serverTcp/: server4  server4.cpp
001_ServerTCP/www/: index.html
002_ServerTCP/classi/: WebServerV2.hpp
002_ServerTCP/serverTcp/: Testing.db  server5
002_ServerTCP/www/: index.html  index1.html
002_ServerTCP_Clion/: CMakeLists.txt
002_ServerTCP_Clion/classi/: SocketTCP.hpp
002_ServerTCP_Clion/serverTcp/: server5.cpp
002_ServerTCP_Clion/www/pippo/: index.html
003_ServervTCP/classi/: SocketTCP.hpp
003_ServervTCP/files/: file-1154087168.txt  file-1162541312.txt  file-1543567616.txt  file-63744.txt  file-875165952.txt  file-883620096.txt  file1303709440.txt  file1312163584.txt  file2000029440.txt  file79038208.txt
003_ServervTCP/serverTcp/: server6  server6.cpp
003_ServervTCP_Clion/: CMakeLists.txt
003_ServervTCP_Clion/classi/: Address.hpp  SocketTCP.hpp  WebServerV3.hpp
003_ServervTCP_Clion/files/: file-1466562816.txt  file-589953280.txt  file1586890496.txt  file1991575296.txt  file2000029440.txt  file2010515200.txt
003_ServervTCP_Clion/lib/: mylib.h
003_ServervTCP_Clion/serverTcp/: server6
SocketUdpTcp/: README.md  TODO.txt
SocketUdpTcp/Errorrrrrr/: chat.cpp
SocketUdpTcp/classi/: Address.hpp  ClientTCP.hpp  Connection.hpp  ServerTCP.hpp  SocketTCP.hpp  SocketUDP.hpp  addressClass
SocketUdpTcp/clientFileTcp/: client  client.cpp
SocketUdpTcp/clientTcp/: client  client.cpp  clientV1.cpp  clientv1
(+32 files in other folders)
