cmake_minimum_required(VERSION 3.10)
project(untitled)
find_package(Threads REQUIRED)
SET(GCC_COVERAGE_COMPILE_FLAGS "-pthread -lsqlite3")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
add_executable(untitled serverTcp/server5.cpp)
target_link_libraries(untitled LINK_PUBLIC sqlite3)